--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,24 @@ Intro
 
 #intro h5 {
   color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+@media (max-width: 600px) {	
+	#intro h5 {
+  		color: #fff;
+  		font-size: 18px;
+  		font-weight: 700;
+	}
+}
+
+@media (max-width: 400px) {	
+	#intro h5 {
+  		color: #fff;
+  		font-size: 15px;
+  		font-weight: 700;
+	}
 }
 
 #intro p {
@@ -336,11 +354,24 @@ Intro
   color: #fff;
 }
 
-@media (max-width: 768px ) {
+@media (max-width: 768px) {
   #intro h2 {
-    font-size: 36px;
+    font-size: 30px;
   }
 }
+
+@media (max-width: 425px) {
+  #intro h2 {
+    font-size: 28px !important;
+  }
+}
+
+@media (max-width: 320px) {
+  #intro h2 {
+    font-size: 25px !important;
+  }
+}
+
 
 #intro .carousel-inner .item {
   transition-property: opacity;
